include/liba.h

/* liba — generated by cbindgen from a-capi; do not edit. */

#ifndef LIBA_H
#define LIBA_H

#include <stdbool.h>
#include <stdint.h>
#include <stddef.h>
/* Wire status codes (a_try_fill, a_set_storage, a_test_panic): 0 = ok,
 * negative = error, append-only — treat unknown codes as A_STATUS_PANIC. */
#define A_STATUS_OK 0
#define A_STATUS_PANIC (-1)
#define A_STATUS_INVALID_ARGUMENT (-2)
#define A_STATUS_BUSY (-3)

#define A_ABI_VERSION 1
#define A_STORAGE_HEAP 0u
#define A_STORAGE_DMABUF 1u
#define A_STORAGE_IOSURFACE 2u

/* DRM format vocabulary carried by AFrameDescV2 (see a-abi). */
#define A_FOURCC_RGBA8888 875708754u
#define A_MODIFIER_LINEAR 0u

/* Subscription delivery policies (a_subscribe_with). */
#define A_DELIVERY_BLOCKING 0u
#define A_DELIVERY_LATEST 1u

typedef struct AHandle AHandle;
typedef struct ABuf ABuf;

/**
 * Publicly frozen prefix of struct A. liba hands out a pointer to this;
 * consumers read fields directly with zero function-call overhead.
 */
typedef struct ASharedV1 {
  uint32_t abi_version;
  uint32_t struct_size;
  uint64_t id;
  uint64_t counter;
  double scale;
  int32_t fd;
  uint32_t _pad;
  uint8_t _reserved[24];
} ASharedV1;

/**
 * Borrowed view into a buffer owned by the other side of the boundary.
 * Purely descriptive — carries no ownership. Validity rules (per the API
 * that returned it): invalidated by any mutation of, or the destruction
 * of, the object it was obtained from.
 */
typedef struct ABufView {
  const uint8_t *ptr;
  size_t len;
} ABufView;

/**
 * Exclusive writable view. Only obtainable while the buffer reference is
 * unique; `ptr` is null when the buffer is shared.
 */
typedef struct ABufViewMut {
  uint8_t *ptr;
  size_t len;
} ABufViewMut;

/**
 * Geometry of a frame buffer: rows × cols × channels of u8, with a row
 * stride in BYTES that may exceed cols × channels (padded/non-contiguous
 * rows). Element stride is `channels`, channel stride is 1.
 */
typedef struct AFrameInfoV1 {
  size_t rows;
  size_t cols;
  size_t channels;
  size_t row_stride;
} AFrameInfoV1;

/**
 * Exported descriptor for a frame's underlying storage — the cross-process
 * zero-copy handle.
 *
 * Evolution note: this struct is returned BY VALUE, which bakes its size
 * into every consumer call site — the reserved-tail/`struct_size` growth
 * model cannot apply. By-value ABI types are immutable forever and evolve
 * by suffixed successors (`AFrameDescV2` + `a_buf_export2`). The same rule
 * covers `ABufView`, `ABufViewMut`, and `AFrameInfoV1`. Kind decides which field is meaningful:
 * - `A_STORAGE_HEAP`: neither (`fd` = -1, `id` = 0); process-local only.
 * - `A_STORAGE_DMABUF`: `fd` is a dup'd DMA-BUF fd OWNED by the caller
 *   (close it when done; mmap it for CPU access, or import into DRM/V4L2/
 *   EGL; use `DMA_BUF_IOCTL_SYNC` around CPU access of device-written data).
 * - `A_STORAGE_IOSURFACE`: `id` is the global `IOSurfaceID`
 *   (`IOSurfaceLookup(id)` in any process; lock before CPU access).
 */
typedef struct AFrameDescV1 {
  uint32_t kind;
  uint32_t _pad;
  int32_t fd;
  uint32_t id;
  size_t offset;
  size_t len;
} AFrameDescV1;

/**
 * Descriptor v2: everything `AFrameDescV1` carries, plus the pixel-format
 * vocabulary a real device pipeline needs to import the buffer.
 *
 * This struct is the worked example of the by-value evolution rule stated
 * on `AFrameDescV1`. `AFrameDescV1` is returned BY VALUE, so its size is
 * baked into every compiled call site and it can never grow — not even
 * into a reserved tail. The successor is therefore a NEW type reached by a
 * NEW entry point (`a_buf_export2`), and both live on forever: an old
 * consumer keeps calling `a_buf_export` against a new library and gets
 * exactly the 32 bytes it was compiled for.
 *
 * Keeping V1's fields as an identical prefix is a convention, not a
 * requirement — it costs nothing and makes the successor a superset.
 */
typedef struct AFrameDescV2 {
  uint32_t kind;
  uint32_t _pad;
  int32_t fd;
  uint32_t id;
  size_t offset;
  size_t len;
  /**
   * DRM fourcc (`A_FOURCC_*`); 0 if the producer does not describe a
   * pixel format.
   */
  uint32_t fourcc;
  uint32_t _pad2;
  /**
   * DRM format modifier (`A_MODIFIER_LINEAR` here). Meaningless without
   * `fourcc`, and an importer that does not recognise it must refuse the
   * buffer rather than guess.
   */
  uint64_t modifier;
  uint32_t width;
  uint32_t height;
  /**
   * Row stride in BYTES; may exceed `width × bytes-per-pixel`.
   */
  uint32_t stride;
  /**
   * Planes in this descriptor. Always 1 here — multi-planar formats
   * (NV12 and friends) would need per-plane fd/offset/stride arrays,
   * which is a v3 shape, not a v2 one.
   */
  uint32_t plane_count;
} AFrameDescV2;

/**
 * Frame callback. Invoked from an internal producer thread, never the
 * registering thread. For subscriptions the frame is BORROWED for the call
 * (retain to keep it); for captures it is OWNED by the callee (release it).
 * Callbacks must not call `a_unsubscribe`, `a_stream_join` or
 * `a_capture_cancel` (deadlock by contract) and should return promptly.
 *
 * For a CANCELLABLE completion callback (`a_capture2`), `frame` may be
 * NULL, meaning the capture was cancelled before it produced anything.
 * The callback is still invoked exactly once — that invariant is what lets
 * every trampoline free its context box unconditionally, so cancellation
 * signals through the argument rather than by not calling.
 */
typedef void (*AFrameCb)(void *user, ABuf *frame);

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Human-readable detail about the most recent failure **on the calling
 * thread**, or NULL if it has not failed yet.
 *
 * Contract: advisory text for logs and debuggers — never parse it, never
 * branch on it; the `AStatus` code is the contract. The pointer is owned by
 * liba and stays valid until this thread's next failing call; copy it if
 * you need it longer. Never free it.
 */
const char *a_last_error_message(void);

AHandle *a_create(uint64_t id);

/**
 * Destroy is a full teardown: joins any active stream and removes every
 * remaining subscription (same guarantee as `a_unsubscribe`) before
 * freeing — after it returns, no callback is in flight and none will fire.
 * May block for the remainder of the active stream.
 *
 * # Safety
 * `p` must be a pointer returned by `a_create` that has not been destroyed.
 */
void a_destroy(AHandle *p);

/**
 * # Safety
 * `p` must be a valid pointer from `a_create`.
 */
uint64_t a_id(const AHandle *p);

/**
 * # Safety
 * `p` must be a valid pointer from `a_create`.
 */
uint64_t a_counter(const AHandle *p);

/**
 * # Safety
 * `p` must be a valid pointer from `a_create`.
 */
void a_increment(AHandle *p);

/**
 * # Safety
 * `p` must be a valid pointer from `a_create`.
 */
double a_scale(const AHandle *p);

/**
 * The repr(C) fast path: expose the frozen shared window by pointer.
 *
 * # Safety
 * `p` must be valid; the returned pointer is borrowed and must not
 * outlive it.
 */
const struct ASharedV1 *a_shared(const AHandle *p);

/**
 * Diagnostic: private implementation size, to demonstrate that internal
 * layout drift is invisible across the boundary.
 */
size_t a_impl_size(void);

/**
 * Borrowed view of A's payload (zero-copy).
 *
 * # Safety
 * `p` must be valid. The view is invalidated by any mutation of `p`
 * (e.g. `a_fill`) and by `a_destroy`.
 */
struct ABufView a_data(const AHandle *p);

/**
 * Refill the payload with a deterministic pattern (mutation: invalidates
 * outstanding `a_data` views; outstanding frames keep the old bytes).
 *
 * # Safety
 * `p` must be valid with exclusive access.
 */
void a_fill(AHandle *p, uint8_t seed);

/**
 * Caller-provided buffer: copies up to `cap` bytes into `out`, returns the
 * number of bytes written.
 *
 * # Safety
 * `p` must be valid; `out` must point to at least `cap` writable bytes,
 * or be NULL (with any `cap`) — the NULL/0 probe returns 0, C-style.
 */
size_t a_copy_data(const AHandle *p, uint8_t *out, size_t cap);

/**
 * Refcounted zero-copy snapshot of the payload. The caller owns one
 * reference and must balance it with `a_buf_release`.
 *
 * # Safety
 * `p` must be valid.
 */
ABuf *a_frame(const AHandle *p);

/**
 * Atomic; may be called from any thread (callback threads included).
 *
 * # Safety
 * `b` must be a live buffer handle.
 */
void a_buf_retain(ABuf *b);

/**
 * Atomic; may be called from any thread. `b` must not be NULL.
 *
 * # Safety
 * `b` must carry a reference the caller is entitled to consume.
 */
void a_buf_release(ABuf *b);

/**
 * Borrowed view of a buffer's contents; valid while the caller holds a
 * reference to `b`.
 *
 * # Safety
 * `b` must be a live buffer handle.
 */
struct ABufView a_buf_map(ABuf *b);

/**
 * Exclusive writable view: non-null only while the caller's reference is
 * the sole one (unique-ownership write access, `Arc::get_mut` semantics).
 *
 * # Safety
 * `b` must be a live buffer handle; the view is valid only while that
 * reference remains unique.
 */
struct ABufViewMut a_buf_map_mut(ABuf *b);

/**
 * Geometry (shape and strides) of a frame buffer.
 *
 * # Safety
 * `b` must be a live buffer handle.
 */
struct AFrameInfoV1 a_buf_info(ABuf *b);

/**
 * Fallible fill demonstrating the error-code convention: validates its
 * arguments (seed 0 is reserved) and shields internal panics.
 *
 * # Safety
 * `p` must be valid with exclusive access.
 */
int32_t a_try_fill(AHandle *p, uint8_t seed);

/**
 * Test hook proving the panic shield: always panics internally and must
 * return `AStatus::Panic` instead of aborting the process.
 */
int32_t a_test_panic(void);

/**
 * Reallocate A's payload in the given storage kind (contents carried
 * over). `InvalidArgument` if the kind is unsupported on this platform.
 *
 * # Safety
 * `p` must be valid with exclusive access.
 */
int32_t a_set_storage(AHandle *p, uint32_t kind);

/**
 * Export a buffer's storage descriptor (see `AFrameDescV1` for field
 * ownership: a dma-buf `fd` is dup'd and owned by the caller).
 *
 * # Safety
 * `b` must be a live buffer handle.
 */
struct AFrameDescV1 a_buf_export(ABuf *b);

/**
 * Descriptor v2: everything `a_buf_export` returns, plus the pixel-format
 * vocabulary an importer needs — DRM fourcc, format modifier, and the
 * buffer's width/height/stride.
 *
 * Why a second entry point rather than a bigger struct: `AFrameDescV1` is
 * returned BY VALUE, so its size is compiled into every existing call
 * site and can never change. Both functions are permanent; a consumer
 * built against v1 keeps working verbatim.
 *
 * # Safety
 * `b` must be a live buffer handle; the reference is borrowed, not
 * consumed. Same fd-ownership rule as `a_buf_export`: for
 * `A_STORAGE_DMABUF` the returned `fd` is a dup the caller must close.
 */
struct AFrameDescV2 a_buf_export2(ABuf *b);

/**
 * Select the storage kind for frames this producer subsequently EMITS
 * (`a_capture`, `a_stream`) — orthogonal to `a_set_storage`, which
 * reallocates the producer's own working payload. A capture pool feeding a
 * GPU importer wants DMA-BUF frames whether or not the producer's own
 * buffer is one.
 *
 * Returns `A_STATUS_INVALID_ARGUMENT` if the kind is unsupported here; the
 * check is eager so an unsupported kind fails once, loudly, instead of
 * silently downgrading every later frame to heap.
 *
 * # Safety
 * `p` must be valid with exclusive access.
 */
int32_t a_set_frame_storage(AHandle *p, uint32_t kind);

/**
 * The storage kind emitted frames are allocated in (default
 * `A_STORAGE_HEAP`).
 *
 * # Safety
 * `p` must be valid.
 */
uint32_t a_frame_storage(const AHandle *p);

/**
 * Register a streaming callback (see `AFrameCb` for the full contract:
 * producer thread, borrowed frame, no unsubscribe/join from the callback).
 *
 * # Safety
 * `p` must be valid with exclusive access; `cb`/`user` callable from
 * another thread for the life of the subscription.
 */
uint64_t a_subscribe(AHandle *p, AFrameCb cb, void *user);

/**
 * Subscribe with an explicit delivery policy (`A_DELIVERY_BLOCKING` or
 * `A_DELIVERY_LATEST`).
 *
 * `A_DELIVERY_BLOCKING` is what `a_subscribe` does: the producer thread
 * invokes the callback directly and nothing is dropped, so a slow
 * subscriber slows the stream for everyone. `A_DELIVERY_LATEST` gives this
 * subscription a one-slot mailbox and its own pump thread: the producer
 * never blocks on it, and if a newer frame arrives before the callback
 * finishes, the older one is dropped (count via `a_sub_dropped`).
 *
 * The teardown guarantee is identical in both modes: after
 * `a_unsubscribe` returns, no callback is running and none will run.
 *
 * Unrecognised policies fall back to blocking rather than refusing — a
 * newer library must never silently stop delivering to an older consumer.
 *
 * # Safety
 * `p` must be valid with exclusive access; `cb`/`user` must be callable
 * from another thread until `a_unsubscribe` returns.
 */
uint64_t a_subscribe_with(AHandle *p, AFrameCb cb, void *user, uint32_t policy);

/**
 * Frames this subscription missed because it was still busy. Always 0
 * under `A_DELIVERY_BLOCKING`, which drops nothing.
 *
 * # Safety
 * `p` must be valid.
 */
uint64_t a_sub_dropped(const AHandle *p, uint64_t id);

/**
 * Remove a subscription. Blocks until any in-flight invocation returns;
 * after it returns the callback will never be invoked again — in either
 * delivery mode (`A_DELIVERY_LATEST` additionally joins the pump thread).
 *
 * # Safety
 * `p` must be valid with exclusive access; not callable from a callback.
 */
void a_unsubscribe(AHandle *p, uint64_t id);

/**
 * One-shot async capture: `cb` is invoked exactly once, from an internal
 * thread, with an OWNED frame reference (release it when done).
 *
 * # Safety
 * `p` must be valid; `cb`/`user` callable from another thread.
 */
void a_capture(const AHandle *p, AFrameCb cb, void *user);

/**
 * Cancellable one-shot capture. Returns an id for `a_capture_cancel`.
 *
 * `cb` is invoked **exactly once**, as with `a_capture` — but `frame` may
 * be NULL, meaning the capture was cancelled before producing anything.
 * Signalling cancellation through the argument rather than by not calling
 * is what keeps the exactly-once invariant every consumer's context
 * cleanup depends on. A non-NULL frame is OWNED, as always.
 *
 * # Safety
 * `p` must be valid with exclusive access; `cb`/`user` must be callable
 * from another thread until the invocation has happened.
 */
uint64_t a_capture2(AHandle *p, AFrameCb cb, void *user);

/**
 * Cancel an in-flight capture and BLOCK until its callback has run —
 * with NULL if cancellation won the race, or with the frame if the capture
 * had already completed.
 *
 * Blocking is deliberate, and the same choice `a_unsubscribe` makes: after
 * this returns nothing is in flight, so the caller may free whatever
 * `user` points at. A non-blocking cancel would leave a consumer with no
 * moment at which its context is provably dead.
 *
 * Returns `A_STATUS_INVALID_ARGUMENT` for an unknown id — a capture
 * completing just before you cancel it is an ordinary race, not a fault.
 * Not callable from inside the callback.
 *
 * # Safety
 * `p` must be valid with exclusive access.
 */
int32_t a_capture_cancel(AHandle *p, uint64_t id);

/**
 * Produce `count` frames ~`period_ms` apart on an internal thread.
 *
 * # Safety
 * `p` must be valid with exclusive access.
 */
void a_stream(AHandle *p, uint32_t count, uint32_t period_ms);

/**
 * Block until the active stream completes; not callable from a callback.
 *
 * # Safety
 * `p` must be valid with exclusive access.
 */
void a_stream_join(AHandle *p);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* LIBA_H */